--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -140,8 +140,15 @@ section.contact {
 }
 
 .tags {
+  list-style: none;
+  padding: 0;
+  margin: 0;
   li {
     border-bottom: colors.$green 2px dotted;
+    list-style: none;
+    &::before {
+      display: none;
+    }
   }
 }
 
